--- a/Session3/END_Assignment_3_Python_Advanced.ipynb
+++ b/Session3/END_Assignment_3_Python_Advanced.ipynb
@@ -6,7 +6,6 @@
       "name": "END_Assignment_3_Python_Advanced.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,7 +52,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "lPOPkQcQbKRQ",
-        "outputId": "4dc8d9f5-3e58-4348-c090-bc895ee38877",
+        "outputId": "acf1d2d3-4170-4abe-acbc-12c1c776d1e4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -70,7 +69,7 @@
         "\n",
         "check_fib(10)  \n"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -89,7 +88,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 1
+          "execution_count": 2
         }
       ]
     },
@@ -114,7 +113,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "5Cmmv0xHcOvv",
-        "outputId": "9c1f4ad3-bf07-49c7-fd40-7f607e884076",
+        "outputId": "9cdc3733-77d0-4ab9-8bbf-4afedb841337",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -140,7 +139,7 @@
         "\n",
         "print(res)"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -159,7 +158,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "i6vepdedWGUo",
-        "outputId": "fa5b19a4-27ae-4772-9da1-703e9ee4ae05",
+        "outputId": "36fea46c-a9a8-4eb2-d94f-be6a328022a5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -173,7 +172,7 @@
         "res.extend([x if not x in vowels else ' ' for x in example ])\n",
         "print(''.join(res))"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -188,7 +187,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "Sm36JViTWPvQ",
-        "outputId": "a63f52ed-0ee3-4a30-8041-acdcc1f7c7b5",
+        "outputId": "f7bf6869-ee32-442d-e2ef-e44ff53f29b0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -198,7 +197,7 @@
         "l = [-1, -2, 0, 4, 5]\n",
         "list(map(lambda x: x if x >= 0 else 0, l))"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -210,7 +209,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 5
         }
       ]
     },
@@ -218,7 +217,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "iWEkC1otWU7T",
-        "outputId": "68bae6d0-4534-4ed7-cde2-90a7016efc81",
+        "outputId": "95f6d5f1-3088-4618-82b4-b3dff94567ef",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -230,7 +229,7 @@
         "l = [-1, -2, 0, 4, 5]\n",
         "list(map(lambda x: 1/(1 + math.exp(-x)) , l))"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -246,7 +245,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 6
         }
       ]
     },
@@ -254,7 +253,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "WjOLlDbPWbAR",
-        "outputId": "84931a2c-acde-4b8e-dd9d-fc67562a1862",
+        "outputId": "bd2c7603-66a5-4ca7-c719-86866a14b84b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -268,7 +267,7 @@
         "print(''.join(res))\n",
         "# chr(ord(x)+5)"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -283,7 +282,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "7Q4_Cl79WezF",
-        "outputId": "a690427e-ae6c-4e43-9309-8554d340de64",
+        "outputId": "5c02f359-fb38-4f41-8e8c-3200e3e2edcd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -315,7 +314,7 @@
         "print(example)\n",
         "print(string)"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -342,7 +341,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "q4ALLiU8cNoj",
-        "outputId": "2eff875f-b664-4248-e953-07ee564f71dd",
+        "outputId": "4eb8c661-9f35-42da-aa98-140029edcf53",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -350,12 +349,17 @@
       "source": [
         "!git clone https://github.com/RobertJGabriel/Google-profanity-words.git\n"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "fatal: destination path 'Google-profanity-words' already exists and is not an empty directory.\n"
+            "Cloning into 'Google-profanity-words'...\n",
+            "remote: Enumerating objects: 9, done.\u001b[K\n",
+            "remote: Counting objects: 100% (9/9), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (9/9), done.\u001b[K\n",
+            "remote: Total 25 (delta 2), reused 0 (delta 0), pack-reused 16\u001b[K\n",
+            "Unpacking objects: 100% (25/25), done.\n"
           ],
           "name": "stdout"
         }
@@ -365,7 +369,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "KcFYquzP_QWz",
-        "outputId": "e18550a4-8f43-4f70-96ef-f98e0cd5a97d",
+        "outputId": "8bbde92b-33b8-4c67-d98b-5622c7576518",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -373,7 +377,7 @@
       "source": [
         "!pip install nltk"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -415,7 +419,7 @@
         "\"\"\"\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -428,14 +432,14 @@
         "  content = f.readlines()\n",
         "swear_words = [s.strip() for s in content]  "
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "h41YrhBn6wt-",
-        "outputId": "2f48b249-89e4-4fe0-f338-49b0d0923873",
+        "outputId": "0e8b85ce-8e22-41f3-914c-23d8063299a5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -460,13 +464,13 @@
         "\n",
         "print(\"Has swear words = \", has_swear)\n"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Package punkt is already up-to-date!\n",
+            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n",
             "983\n",
             "Has swear words =  True\n"
           ],
@@ -494,7 +498,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "S8kweDDEc0eO",
-        "outputId": "26899db4-6663-4f1c-a397-e7a577d59c97",
+        "outputId": "2ec08400-869a-45c8-b702-3bfa1a9c2482",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -517,7 +521,7 @@
         "list2 = [1, 3, 1, 5, 7, 11]\n",
         "add_even(list2)\n"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -537,7 +541,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 14
         }
       ]
     },
@@ -545,7 +549,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "WUonCTEuyNdT",
-        "outputId": "d13ceaea-1e59-42f4-fa97-7c33568109e1",
+        "outputId": "36c39128-b145-475b-823d-cc22471ec68f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 103
@@ -575,7 +579,7 @@
         "input2 = \"034(åéîøü)567\"\n",
         "get_max_char(input2)\n"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -600,7 +604,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 14
+          "execution_count": 15
         }
       ]
     },
@@ -608,7 +612,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "9lvWEFZfuLfE",
-        "outputId": "87d3fc2b-0656-4fc9-d46a-e38037119362",
+        "outputId": "d3588c11-eaf6-4d9f-fc7c-72f0b2cb0ab6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -631,7 +635,7 @@
         "list2 = [0, 4, 1, 4, 4, 5, 1, 6, 7, 8]\n",
         "add_third(list2)"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -651,7 +655,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 15
+          "execution_count": 16
         }
       ]
     },
@@ -669,10 +673,9 @@
       "cell_type": "code",
       "metadata": {
         "id": "mJS7A7jvm1nI",
-        "outputId": "05633264-dea1-4ada-a596-d68df94aeec0",
+        "outputId": "cb27099f-fdf9-489f-8117-6936e8bb9377",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 52
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
@@ -694,31 +697,31 @@
         "  print(license)\n",
         "  return license\n",
         "\n",
-        "generate_license()"
+        "for _ in range(15):\n",
+        "  generate_license()"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "KA64YD7104\n"
+            "KA37FL0720\n",
+            "KA60CW2503\n",
+            "KA05XF7821\n",
+            "KA18RJ8065\n",
+            "KA61PF8388\n",
+            "KA42XT3052\n",
+            "KA44NN4816\n",
+            "KA44SG5855\n",
+            "KA67MB8036\n",
+            "KA14IB3247\n",
+            "KA27TY6640\n",
+            "KA01UW5117\n",
+            "KA25KH4033\n",
+            "KA66WD1038\n",
+            "KA54ZP2735\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'KA64YD7104'"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 16
         }
       ]
     },
@@ -737,7 +740,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "YSXUDEWHpMV6",
-        "outputId": "820e8819-62c3-4178-ebf1-3493ff50bc86",
+        "outputId": "1058733e-f400-4d8b-c9c0-b0145ff60362",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 103
@@ -763,15 +766,15 @@
         "generate_license('DL', 'abcd')\n",
         "generate_license('KA', 944)"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "DL77US7266\n",
-            "KA74EO9230\n",
-            "DL41AQ6353\n",
-            "KA73FD4752\n"
+            "DL57YY6145\n",
+            "KA46CX9230\n",
+            "DL83IG8602\n",
+            "KA32BJ7775\n"
           ],
           "name": "stdout"
         },
@@ -782,13 +785,13 @@
               "type": "string"
             },
             "text/plain": [
-              "'KA73FD4752'"
+              "'KA32BJ7775'"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 17
+          "execution_count": 18
         }
       ]
     }
