--- a/Session 4/ReadMe
+++ b/Session 4/ReadMe
@@ -1,6 +1,6 @@
-##Team Members
+#Team Members
 
 Ayushee Mittal (ayusheemittal530@gmail.com)
 Smita Sasindran (smitasasindran@gmail.com)
 Vidhya Madhavi (vidhya.madhavi@gmail.com)
-Vikas Kumar
+Vikas Kumar (vikasmech.nitk@gmail.com)
